# ai-copilot-websearch-llm-mcp

./: main.py  pyproject.toml  requirements.txt
mcp_server/: client.py
tools/: promptGen.py  serpApi.py  weather.py
