[project]
name = "ai-copilot-websearch-llm-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "black>=25.9.0",
    "boto3>=1.40.35",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.33",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "lxml>=6.0.2",
    "mcp[cli]>=1.14.1",
    "neo4j>=5.28.2",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "readability-lxml>=0.8.4.1",
    "scipy>=1.16.2",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
    "streamlit-mic-recorder>=0.0.8",
    "vosk==0.3.42",
]
